# onrobot_grippers_ros2

./: LICENSE  README.md
onrobot_modbus_headers/: register_map.h
onrobot_rg6_visualization/: CMakeLists.txt  package.xml
onrobot_rg_control/: CMakeLists.txt  package.xml
onrobot_rg_control/launch/: bringup.launch.py  bringup_dual.launch  bringup_server.launch.py
onrobot_rg_control/nodes/: OnRobotRGSimpleController.py  OnRobotRGSimpleControllerServer.py  OnRobotRGStatusListener.py  OnRobotRGTcpNode.py  Rg2JointStatePub.py
onrobot_rg_control/onrobot_rg_control/: baseOnRobotRG.py  comModbusTcp.py
onrobot_rg_description/: CMakeLists.txt  README.md  package.xml
onrobot_rg_description/config/: rg2_visualize.rviz
onrobot_rg_description/launch/: rg2.launch.py
onrobot_rg_description/urdf/: onrobot_rg2_model_macro.xacro  onrobot_rg6_model_macro.xacro
onrobot_rg_gazebo/: package.xml
onrobot_rg_modbus_tcp/onrobot_rg_modbus_tcp/: comModbusTcp.py
